--- a/src/index.htm
+++ b/src/index.htm
@@ -10,6 +10,10 @@
   <h1>Webpack - TypeScript - Scss</h1>
   <h2>TypeScript Hello World</h2>  
   <div id="content"></div>
+
+  <table id="dumpcontent">
+    
+  </table>
     
   <script src="bundle.js"></script>
 </body>
